--- a/content/5_validierung/validierung.tex
+++ b/content/5_validierung/validierung.tex
@@ -24,10 +24,10 @@ Die Implementation wurde in \gls{g:labview} durchgeführt. Aufgrund der Probleme 
 %
 %
 % Soll/Ist-Vergleich Zeitplan
-\section{Soll/Ist-Vergleich Zeitplan}\label{sec:sollist}\todo{Bezug auf den Zeitplan, Abweichungen erklären; Stand der Dinge}
+\section{Soll/Ist-Vergleich Zeitplan}\label{sec:sollist}
 	Der zu Beginn im Abschnitt \vref{ss:ablauf_gliederung_projekt} geplante Ablauf konnte bezogen auf die Arbeitsteilung zu grossen Teilen eingehalten werden. Eine Ausnahme ergab sich in der Konzeptphase, bei der es wegen Verzögerungen zwingend wurde, dass beide Autoren sich an der Entwicklung des Algorithmus und der Experimental-Protokollen beteiligten. Hinsichtlich der Beurteilbarkeit des Projekts wurde jedoch darauf geachtet, dass die Mehrheit der Arbeit demjenigen Autor zufiel, der auch die Verantwortung für das \acrfull{ac:ap} trug.\par
 	%
-	Die angetönte Verzögerung während der Konzeptphase hatte auch grossen Einfluss auf den definierten Zeitplan. Anstatt der vorgesehenen Aufwand von drei Tage für die Entwicklung des Algorithmus mussten deren 11 eingesetzt werden. Durch diesen Fakt wurden alle folgenden \gls{ac:ap}s zeitlich nach hinten verschoben. Dies hatte zur Folge, dass weniger Zeit für diese Arbeiten aufgewendet werden konnte. Insbesonders die \gls{ac:ap} \textsf{Umsetzung \gls{g:matlab} $\rightarrow$ \gls{g:labview}}, \textsf{Soll/Ist-Vergleich} und \textsf{Zusammenfassung der Resultate} mussten stark eingeschränkt werden. Um die Erfüllung der Projektziele trotzdem zu ermöglichen wurden Massnahmen hinsichtlich dem entfernen der Pakete \textsf{Präsentation vorbereiten} und \textsf{Plakat erstellen} ergriffen\footnote{Die beiden \gls{ac:ap} müssen erst bei der Präsentation erledigt sein}. Weiter wurden die Arbeitszeiten erheblich erhöht. Durch dieses Vorgehen konnte Zeit gutgemacht werden, was schlussendlich zum genügenden Abschliessen aller \gls{ac:ap}s führte. Die zeitliche Entwicklung des Projekts kann gut in der Abbildung \vref{img:soll_ist} erkannt werden, bei der der geplante zeitliche Verlauf blau und der tatsächliche rot hervorgehoben ist. 
+	Die angetönte Verzögerung während der Konzeptphase hatte auch grossen Einfluss auf den definierten Zeitplan. Anstatt der vorgesehenen Aufwand von drei Tage für die Entwicklung des Algorithmus mussten deren 11 eingesetzt werden. Durch diesen Fakt wurden alle folgenden \gls{ac:ap}s und Meilensteine zeitlich nach hinten verschoben. Dies hatte zur Folge, dass weniger Zeit für diese Arbeiten aufgewendet werden konnte. Insbesonders die \gls{ac:ap} \textsf{Umsetzung \gls{g:matlab} $\rightarrow$ \gls{g:labview}}, \textsf{Soll/Ist-Vergleich} und \textsf{Zusammenfassung der Resultate} mussten stark eingeschränkt werden. Um die Erfüllung der Projektziele trotzdem zu ermöglichen wurden Massnahmen hinsichtlich dem entfernen der Pakete \textsf{Präsentation vorbereiten} und \textsf{Plakat erstellen} ergriffen\footnote{Die beiden \gls{ac:ap} müssen erst bei der Präsentation erledigt sein}. Weiter wurden die Arbeitszeiten erheblich erhöht. Durch dieses Vorgehen konnte Zeit gutgemacht werden, was schlussendlich zum genügenden Abschliessen aller \gls{ac:ap}s führte. Die zeitliche Entwicklung des Projekts kann gut in der Abbildung \vref{img:soll_ist} erkannt werden, bei der der geplante zeitliche Verlauf blau und der tatsächliche rot hervorgehoben ist. 
 	%
 	\image{content/5_validierung/image/zeit_ist_soll}{scale=1}{htbp}[Zeitplan Soll- (blau)/Ist- (rot) Vergleich][Zeitplan Soll/Ist Vergleich][img:soll_ist]
 	%
