--- a/glossary.tex
+++ b/glossary.tex
@@ -40,6 +40,8 @@
 %
 % LabVIEW
 \newglossaryentry{g:labview}{name=LabVIEW, description={System Design Software von der Firma \acrfull{ac:ni}}}
+\newglossaryentry{g:host}{name=Host, description={System mit installierter \gls{g:labview}-Umgebung von \gls{ac:ni}, meist ein Computer}}
+\newglossaryentry{g:target}{name=Target, description={Embedded Hardware mit \gls{g:labview}-Kompatibilität. In diesem Projekt handelt es sich dabei um das \gls{g:myrio}}}
 %
 % myRIO
 \newglossaryentry{g:myrio}{name=NI myRIO, description={Developmentboard der Firma \acrfull{ac:ni} entwickelt für den günstigen Einstieg in \gls{g:labview}}}
