some but not all corrections

--- a/content/5_validierung/validierung.tex
+++ b/content/5_validierung/validierung.tex
@@ -14,7 +14,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Validierung}\label{ch:validierung}
 \section{Ergebnis der Arbeit}
-Das entwickelte Konzept zeichnet die Auslenkung des Knies in einer Ebene senkrecht zur Gravitation auf. Die Kompensation der Orientierung des Sensors durch Rotation wurde erfolgreich validiert. Die Auslenkung des Knies in der \gls{g:transversalebene} wurde ebenfalls in einem experimentelle Umfeld ausgewertet. Dabei wurde für dn fall der Translation eine geeignete Performance erreicht. Die Schätzungsgenauigkeit, was für die vorliegende Anwendung bei weitem ausreicht.\par
+Das entwickelte Konzept zeichnet die Auslenkung des Knies in einer Ebene senkrecht zur Gravitation auf. Die Kompensation der Orientierung des Sensors durch Rotation wurde erfolgreich validiert. Die Auslenkung des Knies in der \gls{g:transversalebene} wurde ebenfalls in einem experimentelle Umfeld ausgewertet. Dabei wurde für den fall der Translation eine geeignete Performance erreicht. Die Schätzungsgenauigkeit, was für die vorliegende Anwendung bei weitem ausreicht.\par
 %
 Bei Auslenkungen, welche zusätzlich eine Rotation beinhalten, erhöhen sich die Fehler durch die Projektionen der Gravitationskomponente auf die \gls{g:transversalebene}. Diese Verfälschung wird mit integriert und führt zu einem nicht akzeptablen Fehler in der Auslenkungsschätzung. Das Konzept ist bei dieser Art von Bewegung noch fehlerhaft. In dieser Beziehung besteht noch Verbesserungspotenzial.\par
 %
