--- a/acronyms.tex
+++ b/acronyms.tex
@@ -31,6 +31,8 @@
 \newacronym{ac:lms}{LMS}{Least Mean Square}
 \newacronym{ac:sftp}{SFTP}{Secure File Transfer Protocol}
 \newacronym{ac:iir}{IIR}{Infinite Impulse Response}
+\newacronym{ac:soc}{SoC}{System-on-a-Chip}
+\newacronym{ac:fpga}{FPGA}{Field Programmable Gate Array}
 
 
 
