--- a/report.tex
+++ b/report.tex
@@ -21,7 +21,7 @@
 %Dokumentangaben
 \newcommand{\Titel}{Bachelorthesis}
 \newcommand{\Uebertitel}{Smart Rehabilitation bei Kreuzbandrissen}
-\newcommand{\AutorA}{Reto Zurschmieden}
+\newcommand{\AutorA}{Reto Zurschmiede}
 \newcommand{\AutorB}{Simon Grossenbacher}
 \newcommand{\DozentA}{Rolf Vetter}
 \newcommand{\DozentB}{Ivo Oesch}
