--- a/content/6_schlusswort/schlusswort.tex
+++ b/content/6_schlusswort/schlusswort.tex
@@ -13,8 +13,8 @@
 % 0.0.0       Erstellung der Datei
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%    
 \chapter{Schlusswort}\label{ch:schlusswort}
-	Unter dem Kapitel Schlussfolgerung analysieren Sie die gewonnenen Ergebnisse und vergleichen diese eventuell mit Bekanntem.\par
+	Bedingt durch das Engagement im Projekt Eurobot standen für diese Arbeit nur 5 Wochen zur Verfügung. In dieser Zeit galt es sich das nötige Wissen anzueignen, zu analysieren und die gestellten Anforderungen umzusetzen. Wie es sich während den Projektphasen zeigte, reicht diese Zeit bei weitem nicht aus um die relevanten Aspekte der Biomechanik zu verstehen und gleichzeitig eine Umsetzung anzustreben. Durch dies bedingt musste gerade bei der Algorithmus-Entwicklung wiederholt von vorne begonnen werden, was schlussendlich eine solide Realisierung verunmöglichte. Weiter wären klare und im Voraus bekannte Ziele und Anforderungen wünschenswert gewesen, hätte es doch den Einstieg in die Thematik stark vereinfacht Es ist zu hoffen, dass in naher Zukunft das Projekt Eurobot besser mit der folgenden Thesis-Arbeiten harmoniert.\par
 	%
-	Erreichtes und/oder Nicht-Erreichtes werden herausgearbeitet und mit der ursprünglichen Zielsetzung verglichen.\par 
-	%
-	Die Schlussfolgerung stellt nochmals einen Überblick des Hauptteils dar. Sie fassen die in Einzelschritten gewonnenen Ergebnisse zusammen, bewerten ihren Nutzen und bestimmen ihren Stellenwert für die allgemeine Forschungslage.
+	Abschliessend lässt sich sagen, dass in der kurzen Zeit dennoch fundierte Grundlagen für den weiteren Verlauf des Projekts erarbeitet und aufgezeigt werden konnten.
+	
+	
