--- a/content/5_validierung/validierung.tex
+++ b/content/5_validierung/validierung.tex
@@ -14,15 +14,15 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Validierung}\label{ch:validierung}
 \section{Ergebnis der Arbeit}
-Das entwickelte Konzept zeichnet die Auslenkung des Knies in einer Ebene senkrecht zur Gravitation auf. Die Kompensation der Orientierung des Sensors durch Rotation wurde erfolgreich verifiziert. Die Auslenkung des Knies in der \gls{g:transversalebene} wurde ebenfalls in einem experimentelle Umfeld ausgewertet. Dabei wurde für den Fall der Translation eine geeignete Performance erreicht.\par
+Das entwickelte Konzept zeichnet die Auslenkung des Knies in einer Ebene senkrecht zur Gravitation auf. Die Kompensation der Orientierung des Sensors durch Rotation wurde erfolgreich verifiziert. Alle Messungen der Winkelschätzung hatten eine grosse Konstanz. Untereinander weichten die Messungen im schlechtesten Fall um nur $\pm$\unit[0.152]{°} ab. Die Auslenkung des Knies in der \gls{g:transversalebene} wurde ebenfalls in einem experimentellen Umfeld ausgewertet. Dabei wurde für den Fall einer Translation eine geeignete Performance erreicht. Bei einer Translation um beispielsweise -5 cm wurde ein Mittelwert von \unit[-4.81]{cm} mit einer Standardabweichung von $\pm$\unit[0.35]{cm} ermittelt.\par
 %
-Bei Auslenkungen, welche zusätzlich eine Rotation beinhalten, erhöhen sich die Fehler durch die Projektionen der Gravitationskomponente auf die \gls{g:transversalebene}. Diese Verfälschung wird mit integriert und führt zu einem nicht akzeptablen Fehler in der Auslenkungsschätzung. Das Konzept ist bei dieser Art von Bewegung noch fehlerhaft und es besteht diesbezüglich noch Verbesserungspotenzial.\par
+Bei Auslenkungen, welche zusätzlich eine Rotation beinhalten, erhöhen sich die Fehler durch die Projektionen der Gravitationskomponente auf die \gls{g:transversalebene}. Diese Verfälschung wird mit integriert und führt zu nicht akzeptablen Fehlern in der Auslenkungsschätzung. Das Konzept ist bei dieser Art von Bewegung noch fehlerhaft. Hier besteht diesbezüglich noch Verbesserungspotenzial.\par
 %
 Die theoretische Analyse der Bewegung am Knie bietet die Möglichkeit weitere Verbesserungsmöglichkeiten am Konzept aufzuzeigen. Die Bewegung kann mittels eines Modells in einen dynamischen und einen statischen Fall unterteilt werden. Das Model beschreibt die Bewegung als eine harmonische Funktion. Der dynamische Fall unterscheidet sich vom statischen durch eine definierte Grenzfrequenz. Diese ist nur abhängig von der Kniehöhe. Im dynamischen Fall hat bei einer Auslenkung, welche eine Translation und eine Rotation beinhaltet, die projektierte Gravitation einen vernachlässigbar kleinen Einfluss. Dieses Modell wurde mathematisch hergeleitet und anschliessend simuliert und soll als Grundlage zur Erarbeitung zukünftiger Auslenkungs-Schätzungsmethoden dienen.\par 
 %
-Die Implementation wurde in \gls{g:labview} durchgeführt. Aufgrund der Probleme bei der Konzeptentwicklung konnte die Implementierung nicht vollständig umgesetzt werden. Hier besteht das teilweise umgesetzte Konzept. Probleme bestehen momentan bei der Integration der Beschleunigungsdaten, die noch nicht zuverlässig funktioniert. Aus diesem Grund konnte die Implementierung auch noch nicht vollständig validiert werden.
+Für die reproduzierbare Validierung des Konzepts sind drei verschiedene Experimental-Protokolle erstellt worden. Mit diesen wurde eine Datenbasis aufgenommen, die zur Entwicklung des Algorithmus diente.\par
 %
-Für reproduzierbare Validierungen von Konzepten hinsichtlich dieses Messumfelds sind drei verschiedene Experimental-Protokolle erstellt worden. Diese Umfassen...
+Die Implementation wurde in \gls{g:labview} durchgeführt. Aufgrund der Probleme bei der Konzeptentwicklung konnte die Implementierung nicht vollständig umgesetzt werden. Hier besteht das teilweise umgesetzte Konzept. Probleme bestehen momentan bei der Integration der Beschleunigungsdaten, die noch nicht zuverlässig funktioniert. Aus diesem Grund konnte die Implementierung auch noch nicht vollständig validiert werden.
 %
 %
 % Soll/Ist-Vergleich Zeitplan
@@ -34,10 +34,11 @@ Für reproduzierbare Validierungen von Konzepten hinsichtlich dieses Messumfelds 
 	\image{content/5_validierung/image/zeit_ist_soll}{scale=1}{htbp}[Zeitplan Soll- (blau)/Ist- (rot) Vergleich][Zeitplan Soll/Ist Vergleich][img:soll_ist]
 	%
 	%
-\section{Erkenntnisse, Ausblick}\todo{Ausblick -> Wir haben einen Testaufbau erstellt}
+\section{Erkenntnisse, Ausblick}
 	\begin{itemize}
 		\item Das Konzept muss umgebaut werden, damit die Rotation kontinuierlich neu berechnet wird und nicht nur zu Beginn der Messung, wenn der Sensor in Ruhe ist.
 		\item Die berechnete Grenzfrequenz ist für die Entwicklung des verfeinerten Konzeptes zu beachten. Das Konzept kann damit in eine Berechnung der Bewegung im statischen Fall sowie im dynamischen Fall unterteilt werden.
 		\item In der Literaturstudie hat sich gezeigt, dass bei vielen Arbeiten zusätzlich ein \gls{g:gyroskop} oder ein \gls{g:magnetometer} verwendet wird. Hier ist genauer abzuklären ob eine Verwendung von verschiedenen Sensoren sinnvoll ist.		
-		\item \gls{g:labview} nicht unter Windows 8.x verwenden. Die gesamte Toolchain verhält sich sehr instabil, ins besonders die USB-Treiber für das \gls{g:myrio}. 
+		\item \gls{g:labview} nicht unter Windows 8.x verwenden. Die gesamte Toolchain verhält sich sehr instabil, ins besonders die USB-Treiber für das \gls{g:myrio}.
+		\item Der Testaufbau für die Verifizierung der Translation und Rotation kann in späteren Projekten verwendet werden. Ebenfalls steht dazu die aufgenommene Datenbasis zur Verfügung.
 	\end{itemize}
